# slang-server

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc  .spr.yml  .stylua.toml  404.html  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DEVELOPING.md  Developing.md  README.md  REUSE.toml  codecov.yml  index.html  lsp-rr-wrapper.py  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  copilot-setup-steps.yml  coverage.yml  mkdocs_deploy.yml  mkdocs_preview.yml  neovim-sync.yml  precommit.yml  publish-patch.yml  release.yml  vscode-ci.yml  vscode-publish.yml
clients/neovim/: README.md
clients/vscode/: .depcheckrc.yaml  .gitignore  .prettierignore  CONFIG.md  DEVELOPING.md  README.md  eslint.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
cmake/: coverage.cmake  gitversion.cmake  gitversion.cmake.in  install-rules.cmake
design/indexing/: index.html
design/shallow/: index.html
docs/: index.md
docs/design/: indexing.md  shallow.md
docs/features/: completions.md  features.md  formatting.md  hovers.md  limitations.md  planned.md
docs/hdl/: api.md  hdl.md  neovim.md  vscode.md
docs/start/: building.md  config.md  installing.md
features/completions/: index.html
features/features/: index.html
features/hovers/: index.html
features/limitations/: index.html
features/planned/: index.html
hdl/api/: index.html
hdl/hdl/: index.html
hdl/neovim/: index.html
hdl/vscode/: index.html
include/: ConeTracer.h  Config.h  Hovers.h  Indexer.h  InstanceVisitor.h  Logging.h  ReferenceIndexer.h  SemanticToken.hpp  ServerDiagClient.h  ServerDriver.h  SlangLspClient.h  SlangServer.h  SlangServerWcp.h  SystemTaskDocs.h  WcpClient.h
include/ast/: ConeTracer.h  HierarchicalView.h  InstanceIndexer.h  InstanceVisitor.h  ReferenceIndexer.h  ServerCompilation.h  ServerCompilationAnalysis.h  SlangServerWcp.h  WcpClient.h
include/codeactions/: AddDefine.h  CodeActionDispatch.h  ExpandMacro.h
include/completions/: CompletionContext.h  CompletionDispatch.h  Completions.h  SystemTaskCompletions.h
include/document/: DefinitionInfo.h  InlayHintCollector.h  SemanticTokenTypes.hpp  SemanticTokens.h  SemanticTokens.hpp  ShallowAnalysis.h  SlangDoc.h  SymbolIndexer.h  SymbolTreeVisitor.h  SyntaxIndexer.h
include/lsp/: JsonRpc.h  JsonRpcServer.h  JsonTypes.h  LspClient.h  LspServer.h  LspTypeExtensions.h  LspTypes.h  SnippetString.h  URI.h  URI.hpp
include/semantic_tokens/: SemanticToken.hpp  SemanticTokensClassifier.hpp
include/util/: Converters.h  Formatting.h  Logging.h  Markdown.h  SlangExtensions.h
include/wcp/: WcpTypes.h
previews/pr-14/: index.html
previews/pr-153/: sitemap.xml
previews/pr-17/: sitemap.xml
previews/pr-202/: 404.html  index.html  sitemap.xml
previews/pr-257/: 404.html  index.html  sitemap.xml
previews/pr-27/: sitemap.xml
previews/pr-290/: sitemap.xml
previews/pr-302/: sitemap.xml
previews/pr-303/: sitemap.xml
previews/pr-313/: sitemap.xml
previews/pr-34/: 404.html  sitemap.xml
previews/pr-353/: sitemap.xml
previews/pr-397/: index.html
previews/pr-49/: sitemap.xml
previews/pr-50/: index.html  sitemap.xml
previews/pr-60/: sitemap.xml
previews/pr-61/: sitemap.xml
previews/pr-63/: sitemap.xml
previews/pr-68/: sitemap.xml
scripts/: Snippets.hpp  check_headers.py  fix_headers.py  gen_semantic_tokens.py  gen_snippets.py  gen_snips.py  genconfig.py  semantic_tokens.txt  syntax.yaml
scripts/ci/: neovim-sync.py
search/: search_index.json
src/: Config.cpp  Formatting.cpp  Hovers.cpp  Indexer.cpp  SemanticTokensLegend.hpp  ServerDiagClient.cpp  ServerDriver.cpp  SlangServer.cpp  SystemTaskDocs.cpp  WcpClient.cpp  gen_config_main.cpp  server_main.cpp
src/ast/: ServerCompilation.cpp  ServerCompilationAnalysis.cpp  WcpClient.cpp
src/codeactions/: AddDefine.cpp  CodeActionDispatch.cpp  ExpandMacro.cpp
src/completions/: CompletionContext.cpp  CompletionDispatch.cpp  Completions.cpp  Snippets.hpp  SyntacticalCompletions.cpp  SystemTaskCompletions.cpp
src/document/: DefinitionInfo.cpp  (+7 more)
tests/: pyproject.toml
tests/cpp/: CMakeLists.txt  CodeActionTests.cpp  CompilationTests.cpp  CompletionTests.cpp  ConeTests.cpp  DiagTests.cpp  DisabledRegionsTests.cpp  DocumentHighlight.cpp  DriverTests.cpp  FileSyncTests.cpp  FormattingTests.cpp  GotoSyncTests.cpp  GotoTests.cpp  HasValidBuffersTests.cpp  HierarchyTests.cpp  HoverTests.cpp  InactiveRegionsTests.cpp  IndexerTests.cpp  InlayHintTests.cpp  MarkupTests.cpp  PortsTests.cpp  ReferencesTests.cpp  SemanticTokenTests.cpp  SemanticTokensTests.cpp  URITests.cpp  WcpTests.cpp  WorkspaceSymbolTests.cpp  main.cpp
tests/cpp/golden/: AllGenerateBranches.json  ArrayOfStructsCompletion.json  CompilationDiagnostics.json  DocumentHighlightScope.json  FindReferencesAllTokens_all.sv.out  FindReferencesAllTokens_classes.sv.out  FindReferencesAllTokens_crossfile_module.sv.out  FindReferencesAllTokens_crossfile_pkg.sv.out  FindReferencesAllTokens_modules.sv.out  FindReferencesAllTokens_references_test.sv.out  FindReferencesAllTokens_struct_enum_refs.sv.out  FindReferencesModuleCrossfile.sv.out  FindSymbolRef.out  FindSymbolRefHdl.out  FindSymbolRefMacro.out  FindSyntax.out  GetInstancesOfModule.json  GetModulesInFile.json  GetPortsAnsi.json  GetPortsNonAnsi.json  GetPortsNonAnsi_Hovers.json  GetScopeBranches.json  GetScopeChildren.json  GetScopeNested.json  GetScopeUnit.json  GetScopesByModule.json  HierarchicalInstanceCompletion.json  HierarchicalStructCompletion.json  HierarchicalViewIntegration.json  HierarchicalViewWithTopLevel.json  HoverSystemTask.out  InactiveRegions_Document.json  InactiveRegions_SyntaxIndexer.json  IncludedFileDiag.json  InlayHintsAll.out  InlayHintsClassParameterEdgeCases.out  InlayHintsClassTypedefOrdered.out  InlayHintsEmptyPorts.out  InlayHintsFunction.out  InlayHintsFunctionMacroArg.out  (+26 more)
tests/cpp/utils/: ClientHarness.h  GoldenTest.h  InlayHintScanner.cpp  InlayHintScanner.h  ServerHarness.cpp  ServerHarness.h  Utils.h
(+249 files in other folders)
