[project]
name = "server"
version = "0.1.0"
authors = [
    { name="Hudson River Trading" },
]
description = "A short description of your project."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

# This project is only for testing, so these can be normal deps rather than dev deps
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-htmlproofer-plugin>=1.3.0",
    "mkdocs-material>=9.6.19",
    "pygls>=1.3.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
